[gd_scene format=3 uid="uid://cbgvmy6uch54h"]

[ext_resource type="Script" uid="uid://ciu113royav1c" path="res://scripts/mainmenu.gd" id="1_cmhrf"]
[ext_resource type="Texture2D" uid="uid://bkc7oss8qkd70" path="res://assets/new assets/start-button.png" id="2_r3g3c"]
[ext_resource type="Texture2D" uid="uid://biyxjk8ok7u47" path="res://assets/new assets/background-main-menu.jpg" id="2_s5g8n"]
[ext_resource type="Texture2D" uid="uid://b5kip5cboprcq" path="res://assets/new assets/credits-button.png" id="3_3vvtq"]
[ext_resource type="Texture2D" uid="uid://ddbfqxkxkew0r" path="res://assets/new assets/title-new.png" id="3_7yvfd"]
[ext_resource type="AudioStream" uid="uid://dwcbktsrawh2x" path="res://sounds/531851__tissman__menu-click-2.ogg" id="3_wgsso"]

[sub_resource type="LabelSettings" id="LabelSettings_7yvfd"]
font_size = 64
font_color = Color(0, 0, 0, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="menuNode" type="Control" unique_id=653461740]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_cmhrf")

[node name="background" type="TextureRect" parent="." unique_id=1487199496]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.3676887, 1.3676887)
texture = ExtResource("2_s5g8n")

[node name="titleCard" type="TextureRect" parent="." unique_id=1908453727]
layout_mode = 0
offset_left = 362.0
offset_top = -244.0
offset_right = 862.0
offset_bottom = 256.0
scale = Vector2(2.565177, 2.565177)
texture = ExtResource("3_7yvfd")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=551552352]
layout_mode = 0
offset_left = -415.99997
offset_top = -48.999992
offset_right = 1504.0
offset_bottom = 1024.0
scale = Vector2(1.42488, 1.42488)

[node name="Button" type="Button" parent="CenterContainer" unique_id=135161836]
clip_contents = true
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
flat = true
icon_alignment = 1
expand_icon = true

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer/Button" unique_id=1732155530]
position = Vector2(243, 215.00003)
scale = Vector2(0.8980001, 0.8980001)
texture = ExtResource("2_r3g3c")

[node name="Settings" type="CenterContainer" parent="." unique_id=659670482]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43300003
anchor_top = 0.611
anchor_right = 0.55600005
anchor_bottom = 0.68600005
offset_left = -40.360046
offset_top = 296.39697
offset_right = -48.52014
offset_bottom = 290.92194
scale = Vector2(1.42488, 1.42488)

[node name="Button" type="Button" parent="Settings" unique_id=293213626]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Settings/Button" unique_id=1198437685]
position = Vector2(55.043, 6.247158)
scale = Vector2(0.33724993, 0.33724993)
texture = ExtResource("3_3vvtq")

[node name="MusicStream" type="AudioStreamPlayer2D" parent="." unique_id=135042541]
stream = ExtResource("3_wgsso")
bus = &"Music"

[node name="sfxStream" type="AudioStreamPlayer2D" parent="." unique_id=1370590478]
bus = &"Sound effects"

[node name="highscoreLabel" type="Label" parent="." unique_id=727269756]
layout_mode = 0
offset_left = 448.0
offset_top = 968.0
offset_right = 488.0
offset_bottom = 1056.0
text = "0"
label_settings = SubResource("LabelSettings_7yvfd")

[connection signal="pressed" from="CenterContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Settings/Button" to="." method="_on_credits_pressed"]
